5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1756_1183.log
== TEST (2019-05-28 19:08:26) 
-- CODE:
from numpy import*
n= array(eval(input("Digite o vetor: ")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype = int)
j=0
while(j<size(v)):
	if(n[i]>=0)
	v[j]=n[i]
	else:
		while(n[i]<0)
		i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)


-- ERROR:
File "XXXX", line 14
    if(n[i]>=0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:08:45) 
-- CODE:
from numpy import*
n= array(eval(input("Digite o vetor: ")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype = int)
j=0
while(j<size(v)):
	if(n[i]>=0)
	v[j]=n[i]
	else:
		while(n[i]<0)
		i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)


-- ERROR:
File "XXXX", line 14
    if(n[i]>=0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:10:03) 
-- CODE:
from numpy import*
n= array(eval(input("Digite o vetor: ")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype = int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
		else:
			while(n[i]<0):
				i=i+1
			v[j]=n[i]
		i=i+1
		j=j+1
print(v)


-- ERROR:
File "XXXX", line 16
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:10:21) 
-- CODE:
from numpy import*
n= array(eval(input("Digite o vetor: ")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype = int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
			v[j]=n[i]
		i=i+1
		j=j+1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:42:01) 
-- CODE:
from numpy import*
n= array(eval(input("Digite o vetor: ")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype = int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
			v[j]=n[i]
		i=i+1
		j=j+1
print(v)


-- EXECUTION TIME:
2.01844
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:

-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:42:01) 
-- CODE:
from numpy import*
n= array(eval(input("Digite o vetor: ")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype = int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
			v[j]=n[i]
		i=i+1
		j=j+1
print(v)


-- EXECUTION TIME:
1.09809
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:

-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:56:37) 
-- CODE:
from numpy import*
n= array(eval(input("Digite o vetor: ")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype = int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
			v[j]=n[i]
		i=i+1
		j=j+1
print(v)


-- EXECUTION TIME:
0.352306
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:

-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:08:57) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o vetor: ")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype = int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:09:17) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o vetor: ")))
i=0
j=0
m=0
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype = int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)


-- EXECUTION TIME:
0.452478
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 06:56:25) 
-- CODE:
from numpy import*
n = array(eval(input("Digite o vetor: ")))
i=0
j=0 
while(i<size(n)):
	if(n[i]>0):
		j=j+1
	i=i+1
i=0
v=zeros(j, dtype = int)
j=0
while(j<size(v)):
	if(n[i]>=0):
		v[j]=n[i]
	else:
		while(n[i]<0):
			i=i+1
		v[j]=n[i]
	i=i+1
	j=j+1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
